 - Removed Job Points. After removing stat allocation and the skill learn system, JP lost all purpose. I figured it wouldn't be missed if I removed it instead of repurposing it.
 - Removed Steal Bits. Even the description of the skill reinforced how useless it was.
 - Removed the Skeleton enemy from the game. It was replaced in the Adonian Monsters troop, and all other troops containing it are not implemented/encounterable.
 - Removed the item discard feature, since I'm pretty sure not a single person has ever used it once and it was just menu clutter.
 - Removed the Raw Fish and Cooked Fish items due to the new fishing system having specific types of fish and seafood dishes.
 - Removed the Rat Jerky (Ration) because it was literally useless. All methods of obtaining it have replaced it with the regular Ration.
 - Removed the Letter of Recommendation and everything related to Jack in Greenfield. You now head straight to the Mayor's office after entering town.
 - Removed the Telluria Map Fragment. The Map of Telluria can now be purchased immediately from the general store after defeating Laeryidyean.

Changes:
 - Recapped the max level from level 20 to level 30.
 - A huge amount of unnecessary, repetitive, and downright boring dialogue has been culled from the game. Most cutscenes have been made much shorter, and many have even been removed entirely.
 - Many cutscenes and important events have been restructured to make gameplay feel smoother.
 - Replaced Player 2's 2nd magic equip slot with an offhand slot (light shields).
 - Resprited all existing icons from 24px to 32px. Changed many icons of existing items.
 - Overhauled the equip comparison menu.
 - The pub/tavern has been rebranded as The Tipsy Oyster! Barkeep's name has been revealed to be Jeremy, and all of his establishments have been redesigned (except for the original in Haven Harbor).
 - Cut Down is no longer learned by Player 1 at level 11 and is instead provided by equipping any axe.