@@ -2886,11 +2886,6 @@
     ],
     "learnings": [
       {
-        "level": 1,
-        "note": "Alpha 15 - FAMILY",
-        "skillId": 107
-      },
-      {
         "level": 3,
         "note": "Alpha 11",
         "skillId": 15
@@ -2919,11 +2914,6 @@
         "level": 15,
         "note": "Alpha 14",
         "skillId": 69
-      },
-      {
-        "level": 17,
-        "note": "Alpha 14",
-        "skillId": 66
       },
       {
         "level": 17,
