@@ -1857,11 +1857,6 @@
         "code": 22,
         "dataId": 4,
         "value": 0.2
-      },
-      {
-        "code": 14,
-        "dataId": 54,
-        "value": 1
       }
     ],
     "iconIndex": 641,
@@ -1873,7 +1868,7 @@
     "minTurns": 5,
     "motion": 0,
     "name": "Cherry Bomb",
-    "note": "<Category: buff>\n\n<animationRow:17>\n<yAnchor: 0.75>\n\n<Help Description>\nIncreases EVA and MEV by 20%. Cannot be afflicted with \\it[54].\n</Help Description>",
+    "note": "<Category: buff>\n\n<animationRow:17>\n<yAnchor: 0.75>\n\n<Help Description>\nIncreases EVA and MEV by 20%.\n</Help Description>",
     "overlay": 0,
     "priority": 30,
     "removeAtBattleEnd": true,
