@@ -322,6 +322,7 @@ Removals:
  - Removed the skill learn system. Why make the player learn the skill in a menu when they could just learn it via leveling up like literally every other skill normally is?
  - Removed Job Points. After removing stat allocation and the skill learn system, JP lost all purpose. I figured it wouldn't be missed if I removed it instead of repurposing it.
  - Removed Steal Bits. Even the description of the skill reinforced how useless it was.
+ - Removed Smoke Bomb. It was never used by most players and Cherry Bomb is simply better.
  - Removed the Skeleton enemy from the game. It was replaced in the Adonian Monsters troop, and all other troops containing it are not implemented/encounterable.
  - Removed the item discard feature, since I'm pretty sure not a single person has ever used it once and it was just menu clutter.
  - Removed the Raw Fish and Cooked Fish items due to the new fishing system having specific types of fish and seafood dishes.
